--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,7 @@ language: ruby
 rvm:
   - 2.3.4
 before_install: gem install bundler -v 1.14.6
+script:
+  - bundle exec rubocop
+notifications:
+  email: false
